--- a/kontak.html
+++ b/kontak.html
@@ -92,7 +92,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="contact-form">
                         <h5>Formulir Kontak</h5>
-                        <form action="proses_kontak.php" method="post">
+                        <form action="kirim.php" method="post">
     <div class="form-group">
         <label for="name">Nama Lengkap</label>
         <input type="text" id="name" name="name" class="form-control" required>
