--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         /* Hero Section */
         .hero {
             position: relative;
-            background: url(file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/09ec6f6c22a2222f82ec84bc085031c3.jpg) center/cover no-repeat;
+            background: url(https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/09ec6f6c22a2222f82ec84bc085031c3.jpg?raw=true) center/cover no-repeat;
             color: #ff0000;
             /* Teks putih */
             height: 100vh;
