--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="row align-items-center">
                 <!-- Image Column -->
                 <div class="col-md-6 about-image">
-                    <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/5040ed2ce514471f4be0666b2dfaa48c.jpg" alt="School Building">
+                    <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/5040ed2ce514471f4be0666b2dfaa48c.jpg?raw=true" alt="School Building">
                 </div>
                 <!-- Content Column -->
                 <div class="col-md-6 about-content">
