--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="card shadow">
-                                    <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/ekskul-837-x-649.jpg" class="card-img-top" alt="Ekstra Image">
+                                    <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/ekskul-837-x-649.jpg?raw=true" class="card-img-top" alt="Ekstra Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Pencak Silat</h5>
                                         <p class="card-text">Ini adalah ekstrakurikuler di mana siswa bisa...</p>
@@ -313,7 +313,7 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="card shadow">
-                                    <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/ekskul-837-x-649.jpg" class="card-img-top" alt="Ekstra Image">
+                                    <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/ekskul-837-x-649.jpg?raw=true" class="card-img-top" alt="Ekstra Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Paduan Suara</h5>
                                         <p class="card-text">Siswa yang memiliki hobi menyanyi dan ingin...</p>
@@ -322,7 +322,7 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="card shadow">
-                                    <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/ekskul-837-x-649.jpg" class="card-img-top" alt="Ekstra Image">
+                                    <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/ekskul-837-x-649.jpg?raw=true" class="card-img-top" alt="Ekstra Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Rohani Islam</h5>
                                         <p class="card-text">Ekstrakurikuler ini membantu siswa...</p>
@@ -331,7 +331,7 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="card shadow">
-                                    <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/ekskul-837-x-649.jpg" class="card-img-top" alt="Ekstra Image">
+                                    <img src="fhttps://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/ekskul-837-x-649.jpg?raw=true" class="card-img-top" alt="Ekstra Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Jurnalistik</h5>
                                         <p class="card-text">Ekstrakurikuler jurnalistik membantu siswa...</p>
@@ -345,7 +345,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="card shadow">
-                                    <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/ekskul-837-x-649.jpg" class="card-img-top" alt="Ekstra Image">
+                                    <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/ekskul-837-x-649.jpg?raw=true" class="card-img-top" alt="Ekstra Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Rohani Kristen</h5>
                                         <p class="card-text">Rohani Kristen membantu siswa untuk...</p>
