--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <!-- Card 1 -->
                 <div class="col-md-3 mb-4">
                     <div class="card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/75a6a8cc3f9f86f3acbf4ce35221fff3.jpeg" class="card-img-top" alt="Article Image">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/75a6a8cc3f9f86f3acbf4ce35221fff3.jpeg?raw=true" class="card-img-top" alt="Article Image">
                         <div class="card-body">
                             <span class="badge badge-secondary">Berita</span>
                             <h5 class="card-title mt-2">Siswa SMP Negeri 1 Kalimanah Melakukan Deklarasi Anti-Perundungan</h5>
