--- a/galeri.html
+++ b/galeri.html
@@ -112,7 +112,7 @@
                 <!-- Card 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card gallery-card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/IMG_20220309_095633-scaled.jpg" alt="Perpustakaan" class="card-img-top">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/IMG_20220309_095633-scaled.jpg?raw=true" alt="Perpustakaan" class="card-img-top">
                         <div class="gallery-card-body">
                             <h5 class="gallery-card-title">Perpustakaan</h5>
                             <p class="gallery-card-desc">Perpustakaan sekolah yang nyaman dengan koleksi buku yang
