--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <!-- Card 2 -->
                 <div class="col-md-3 mb-4">
                     <div class="card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/cbf127eb6d07e38d609aeef25e3be332.jpeg" class="card-img-top" alt="Article Image">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/cbf127eb6d07e38d609aeef25e3be332.jpeg?raw=true" class="card-img-top" alt="Article Image">
                         <div class="card-body">
                             <span class="badge badge-secondary">Berita</span>
                             <h5 class="card-title mt-2">P5 Pengolahan, Siswa Spensaka Panen Tomat</h5>
@@ -247,7 +247,7 @@
                 <!-- Card 3 -->
                 <div class="col-md-3 mb-4">
                     <div class="card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/d56e623635cb020ee0066dd55b651e73.jpeg" class="card-img-top" alt="Article Image">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/d56e623635cb020ee0066dd55b651e73.jpeg?raw=true" class="card-img-top" alt="Article Image">
                         <div class="card-body">
                             <span class="badge badge-secondary">Berita</span>
                             <h5 class="card-title mt-2">Regu Pramuka Putra SMP Negeri 1 Kalimanah Raih Juara Harapan 3 LT 3 Tahun 2022</h5>
@@ -268,7 +268,7 @@
                 <!-- Card 4 -->
                 <div class="col-md-3 mb-4">
                     <div class="card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/f98bd18185debe5badc7c2c026d61f60.jpeg" class="card-img-top" alt="Article Image">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/f98bd18185debe5badc7c2c026d61f60.jpeg?raw=true" class="card-img-top" alt="Article Image">
                         <div class="card-body">
                             <span class="badge badge-secondary">Berita</span>
                             <h5 class="card-title mt-2">Tim Bola Voli Putra dan Putri SMP Negeri 1 Kalimanah Raih Juara 3 Pertandingan Bola Voli Siswa SMP Se-Kabupaten Purbalingga</h5>
