--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="card shadow">
-                                    <img src="fhttps://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/ekskul-837-x-649.jpg?raw=true" class="card-img-top" alt="Ekstra Image">
+                                    <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/ekskul-837-x-649.jpg?raw=true" class="card-img-top" class="card-img-top" alt="Ekstra Image">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Jurnalistik</h5>
                                         <p class="card-text">Ekstrakurikuler jurnalistik membantu siswa...</p>
