--- a/galeri.html
+++ b/galeri.html
@@ -89,7 +89,7 @@
                 <!-- Card 1 -->
                 <div class="col-md-4 mb-4">
                     <div class="card gallery-card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/download.jpg" alt="Upacara Bendera" class="card-img-top">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/download.jpg?raw=true" alt="Upacara Bendera" class="card-img-top">
                         <div class="gallery-card-body">
                             <h5 class="gallery-card-title">Upacara Bendera</h5>
                             <p class="gallery-card-desc">Momen kebersamaan siswa dalam upacara bendera setiap hari
@@ -101,7 +101,7 @@
                 <!-- Card 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card gallery-card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/UNBK%20SMP.png" alt="Kegiatan Belajar" class="card-img-top">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/UNBK%20SMP.png?raw=true" alt="Kegiatan Belajar" class="card-img-top">
                         <div class="gallery-card-body">
                             <h5 class="gallery-card-title">Kegiatan Belajar</h5>
                             <p class="gallery-card-desc">Siswa belajar dengan penuh semangat di ruang kelas modern.</p>
@@ -124,7 +124,7 @@
                 <!-- Card 4 -->
                 <div class="col-md-4 mb-4">
                     <div class="card gallery-card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/Penampilan-marching-band-SMP-Negeri-1-Purbalingga-di-GOR-Goentoer-Darjono.jpg" alt="Ekstrakurikuler Musik" class="card-img-top">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/Penampilan-marching-band-SMP-Negeri-1-Purbalingga-di-GOR-Goentoer-Darjono.jpg?raw=true" alt="Ekstrakurikuler Musik" class="card-img-top">
                         <div class="gallery-card-body">
                             <h5 class="gallery-card-title">Ekstrakurikuler Musik</h5>
                             <p class="gallery-card-desc">Kegiatan musik siswa untuk mengembangkan bakat dalam seni.</p>
@@ -135,7 +135,7 @@
                 <!-- Card 5 -->
                 <div class="col-md-4 mb-4">
                     <div class="card gallery-card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/abm_smppgii1-1100x600.jpeg" alt="Laboratorium Komputer" class="card-img-top">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/abm_smppgii1-1100x600.jpeg?raw=true" class="card-img-top">
                         <div class="gallery-card-body">
                             <h5 class="gallery-card-title">Laboratorium Komputer</h5>
                             <p class="gallery-card-desc">Fasilitas lab komputer dengan peralatan modern untuk belajar
@@ -147,7 +147,7 @@
                 <!-- Card 6 -->
                 <div class="col-md-4 mb-4">
                     <div class="card gallery-card">
-                        <img src="file:///C:/xampp/htdocs/UAS_smpn1kalimanah/smp-1-kalimanah-main/assets/images/smpn-1-kalimanah-basket.jpg" alt="Fasilitas Olahraga" class="card-img-top">
+                        <img src="https://github.com/ganangdsa/SMPN1KALIMANAH/blob/main/assets/images/smpn-1-kalimanah-basket.jpg?raw=true" alt="Fasilitas Olahraga" class="card-img-top">
                         <div class="gallery-card-body">
                             <h5 class="gallery-card-title">Fasilitas Olahraga</h5>
                             <p class="gallery-card-desc">Berbagai fasilitas olahraga untuk mendukung kegiatan
